service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
  labels:
    app: test-app
spec:
  type: ClusterIP
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
